--- a/.github/workflows/releasebuild.yml
+++ b/.github/workflows/releasebuild.yml
@@ -1,3 +1,5 @@
+name: Release
+
 on:
   push:
     branches:
@@ -43,7 +45,7 @@ jobs:
           version: latest
           args: release --rm-dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.HOMEBREW_GITHUB_TOKEN }}
       -
         name: Clear
         if: always() && startsWith(github.ref, 'refs/tags/v')
